--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nodemon": "^2.0.15"
   },
   "engines": {
-    "npm": ">=7.0.0",
-    "node": ">=16.0.0"
+    "npm": "8.1.2",
+    "node": "16.13.1"
   }
 }
